update for arrays
- different js cleanups

--- a/cf_website_project_1.11/index.html
+++ b/cf_website_project_1.11/index.html
@@ -43,7 +43,7 @@
 
 
 <!-- starting home section -->
-   <div class="container" id="home"> 
+   <div class="container home--container" id="home"> 
 
 <!-- starting with image carousel for hero images -->
 
@@ -91,7 +91,7 @@
 
    
 
-    <div class="container-mission" id="mission-statement"><!-- Lets add  an explanation to why 'we' do what 'we' do -->
+    <div class="container mission-statement--area" id="mission-statement"><!-- Lets add  an explanation to why 'we' do what 'we' do -->
       <div class="row" >
         <div class="col-md-12" >
           <h1> Connecting people in unique ways</h1>
@@ -100,7 +100,7 @@
       </div> <!-- closing row -->
     </div> <!--closing up the explanation mission container-->
 
-    <div class="container" id="container-mission"> <!--creating the body columns for portfolio, goals & available time-->
+    <div class="container skills--area" id="container-mission"> <!--creating the body columns for portfolio, goals & available time-->
         <div class="row">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <img src="img/home/responsive.png" alt="squares">
