--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -357,25 +357,18 @@
 ########################################## -->
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!-- Bootstrap core JS  added under jquery to make sure the cascade reading happens in the right order-->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
-<!-- STELLAR -->
-  <script src="js/jquery.stellar.min.js"></script>
+  
 
-
-<!-- ################ Tooltips ################ -->
-  <script>
- $(function () {
-   $('#become-tester').tooltip();
-   $('#panda-tool').tooltip();
-   $('#submint-tool').tooltip();
-   $('#go-top-tool').tooltip();
- });
-</script>
-<!-- ################ END Tooltips ################ -->
-
+    
+    <script src=“js/work.js”></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/randomiser.js"></script>
+    <script src="js/scripts.js"></script>
+    
 <!-- ######################FB BUTTON################### -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -389,8 +382,6 @@
 
 <!-- ######################TWITTER FOLLOW################### -->
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    <script src="js/randomiser.js" ></script>
-
     <!-- ##########################################
 ################# END  SCRIPTS #################
 ########################################## -->
