Updated personal website
- Cleaned a bit personal website to submit the google api exercise
about google maps

--- a/cf_website_project_1.11/index.html
+++ b/cf_website_project_1.11/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>home</title>
+    <title>novakundesigns</title>
     <link rel="stylesheet" href="css/normalize.css">
         <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -14,6 +14,10 @@
   </head>
 
   <body data-spy="scroll" data-target=".navbar">
+
+<!-- ########################################## -->
+<!-- ************** START NAVBAR ************** -->
+<!-- ########################################## -->
 
    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><!--Creating the nav bar-->
       <div class="container-fluid">
@@ -40,7 +44,13 @@
           </div><!-- closing the navbar-collapse -->
         </div> <!-- end container fluid -->
     </nav> <!--closing the nav bar-->
+<!-- ########################################## -->
+<!-- *************** END NAVBAR *************** -->
+<!-- ########################################## -->
 
+<!-- ########################################## -->
+<!-- *************** START HOME *************** -->
+<!-- ########################################## -->
 
 <!-- starting home section -->
    <div class="container home--container" id="home"> 
@@ -311,43 +321,21 @@
      </div>  <!-- end of main container -->
 </div> <!-- closing FAQ id container -->
 <!-- ****************  page FAQ ENDS  ***************** -->
+<!-- ##########################################
+#################SCRIPTS #################
+########################################## -->
 
-
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+  
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<!-- Bootstrap core JS  added under jquery to make sure the cascade reading happens in the right order-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </body>
+  
 
-<!-- smooth scrolling -->
-<script type="text/javascript">
-  var $root = $('html, body');
-    $('.navbar-nav a').click(function() {
-        var href = $.attr(this, 'href');
-    if(href != undefined) {
-        $root.animate({
-            scrollTop: $(href).offset().top
-        }, 700, function () {
-        window.location.hash = href;
-        });
-    }
-        return false;
-    });
-</script>
-<script>
-      function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-    </script>
-    
+
+    <script type="text/javascript" src="js/work.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+
+
+</body>
 
 </html>
