cleaning up website
- Adding footer to website and cleaning up a bit

--- a/cf_website_project_1.11/index.html
+++ b/cf_website_project_1.11/index.html
@@ -321,9 +321,43 @@
      </div>  <!-- end of main container -->
 </div> <!-- closing FAQ id container -->
 <!-- ****************  page FAQ ENDS  ***************** -->
+
+<!-- ########################################## -->
+<!-- ************** START FOOTER ************** -->
+<!-- ########################################## -->
+
+<div class="container up-arrow--container">
+  <div class="col-xs-12 col-sm-12" id="up-arrow">
+    <a href="#home"><img src="img/contact/up.png" alt="up" data-toggle="tooltip" data-placement="top" title="Go Top" id="go-top-tool"></a>
+  </div>
+  </div>
+<footer>
+    <div class="container">
+        <div class="row vcenter">
+            <div class="col-sm-8 col-xs-12 " id="copyright">
+                <p class="copyright">Copyright &copy;2017 Novakun Designs. All rights reserved.</p>
+            </div>
+            <div class="col-sm-4 col-xs-12 ">
+                <div class="twitter-button">
+                    <a href="https://twitter.com/rrsantamarta" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @rrsantamarta</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                    </div> <!-- closing col4 -->
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- ########################################## -->
+<!-- ************** END FOOTER *************** -->
+<!-- ########################################## -->
+
 <!-- ##########################################
 #################SCRIPTS #################
 ########################################## -->
+
+
+
+
+<!-- ######################TWITTER FOLLOW################### -->
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
   
   
